// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag Beta tag renders as expected 1`] = `
<div
  className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-s border px6"
  data-state="closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  style={Object {}}
>
  Beta
</div>
`;

exports[`tag Custom tag renders as expected 1`] = `
<div
  className="txt-bold round inline-block cursor-default bg-red-light color-red-dark border--red txt-s border px6"
  data-state="closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  style={Object {}}
>
  Limited access
</div>
`;

exports[`tag small variant renders as expected 1`] = `
<div
  className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-xs px6"
  data-state="closed"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPointerDown={[Function]}
  onPointerLeave={[Function]}
  onPointerMove={[Function]}
  style={Object {}}
>
  Beta
</div>
`;
